--- a/projeto-loja/back-end/package.json
+++ b/projeto-loja/back-end/package.json
@@ -2,11 +2,11 @@
   "name": "back-end",
   "version": "1.0.0",
   "description": "",
-  "main": "./dist/server.js",
+  "main": "nodemon src/server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsc -w",
-    "watch": "nodemon ./dist/server.js"
+    "dev": "nodemon src/server.ts",
+    "build": "sucrase ./src -d ./dist --transforms typescript,imports"
   },
   "author": "",
   "license": "ISC",
@@ -25,6 +25,7 @@
     "@types/mongoose": "^5.11.97",
     "@types/node": "^18.6.4",
     "nodemon": "^2.0.19",
+    "sucrase": "^3.25.0",
     "typescript": "^4.7.4"
   }
 }
