--- a/projeto-loja/front-end/tsconfig.json
+++ b/projeto-loja/front-end/tsconfig.json
@@ -6,6 +6,10 @@
     "moduleResolution": "Node",
     "strict": true,
     "jsx": "preserve",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    },
     "sourceMap": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
